--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>
         <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
         <mapstruct.version>1.5.2.Final</mapstruct.version>
-        <h2.version>2.1.210</h2.version>
+        <h2.version>1.4.200</h2.version>
         <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     </properties>
     <dependencies>
@@ -35,6 +35,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -112,7 +116,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/swagger-conf.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/swagger.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <configurationFile>${project.basedir}/src/main/resources/config.json</configurationFile>
                             <ignoreFileOverride>${project.basedir}/src/main/resources/.openapi-generator-ignore
