--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: admin
     password: admin
-    url: "jdbc:h2:mem:h2_data;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE"
+    url: "jdbc:h2:mem:mydb;DB_CLOSE_ON_EXIT=FALSE"
   h2:
     console:
       enabled: true
@@ -16,6 +16,7 @@ spring:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: update
+    open-in-view: false
   mvc:
     format:
       date-time: yyyy-MM-dd HH:mm:ss
